--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,11 @@ name: mofleet
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
-  
+
 dev_dependencies:
   melos: ^6.3.2
+
+dependencies:
+  provider: ^6.1.2
+  flutter:
+    sdk: flutter
