feat: add shared in different unpublishable packages, remove localization, make the apps works

--- a/melos.yaml
+++ b/melos.yaml
@@ -13,5 +13,7 @@ scripts:
   dart:fix:
     exec: dart fix --apply
   
+  run:
+    exec: flutter run --flavor development --target lib/main_development.dart
   analyze:
     exec: dart analyze .
