--- a/apps/filetk/pubspec.yaml
+++ b/apps/filetk/pubspec.yaml
@@ -11,11 +11,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
-  flutter_localizations:
-    sdk: flutter
   intl: ^0.19.0
+  provider: ^6.1.2
+  shared: ^0.1.0+1
 
-  provider: any
 dev_dependencies:
   bloc_test: ^9.1.7
   flutter_test:
@@ -25,4 +24,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  generate: true
+  # generate: true
+
